--- a/style/style.css
+++ b/style/style.css
@@ -1,694 +1,34 @@
-/* Base  */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Ancizar+Sans:ital,wght@0,100..1000;1,100..1000&display=swap');
-
-/*  Body y Main  */
 body {
-    margin: 0;
-    font-family: 'Ancizar Sans', sans-serif;
-    color: #343434;
+  line-height: 1.5;
 }
 
-main {
-    width: 90%;
-    max-width: 1440px;
-    margin: 0 auto;
-    padding: 20px 0;
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
-header {
-    padding-top: 8px;
+button, textarea {
+  font: inherit;
 }
 
-/*  Navbar  */
-.navbar ul {
-    font-size: 20px;
-    gap: 50px;
-
-}
-
-.logo--image {
-    width: 50px;
-    height: auto;
-}
-
-.nav-search {
-    width: 300px;
-}
-
-.nav-search:active {
-    border: #C2171E;
-}
-
-/* ------------ INDEX -------------------------------------------- */
-
-/* secondarynav  */
-.secondarynav--image {
-    background-image: url("../assetsProyecto/secondaryNav.png");
-    background-size: cover;
-    background-position: center;
-    min-height: 100px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-}
-
-.secondarynav--texto {
-    color: #fafafa;
-    font-weight: bold;
-    text-shadow: 1px 1px 2px rgb(255, 255, 255);
-}
-
-/* Presentación */
-.presentacion {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 32px;
-    padding: 16px;
-    align-items: center;
-    text-align: center;
-    margin-bottom: 40px;
-}
-
-.presentacion--image {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-    object-fit: cover;
-}
-
-.button--quienessomos {
-    padding: 5px 15px;
-    margin-top: 15px;
-    border: 1px solid #ED1C24;
-    border-radius: 8px;
-    background-color: #ED1C24;
-    color: #FAFAFA;
-    display: inline-block;
-    text-decoration: none;
-
-}
-
-.button--quienessomos:hover {
-    background-color: #C2171E;
-    border-color: #C2171E;
-}
-
-
-/* Recetas */
-
-.category-block {
-    margin-bottom: 40px;
-}
-
-.recipe-title {
-    text-align: left;
-    margin-bottom: 30px;
-    color: #ED1C24;
-    font-size: 35px;
-}
-
-/* Contenedor de Cards de Recetas (GRID)  */
-.cards-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
-    margin-bottom: 30px;
-}
-
-/*  Card Individuales */
-.recipe-card {
-    border: 2px solid #ED1C24;
-    border-radius: 8px;
-    overflow: hidden;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: 100%;
-}
-
-/* .recipe-card:hover {
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-} */
-
-.recipe-card__image {
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-}
-
-.recipe-card__content {
-    padding: 15px;
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    justify-content: space-between;
-}
-
-.recipe-card__title {
-    font-size: 32px;
-    margin-top: 0;
-    margin-bottom: 10px;
-    color: #212121;
-}
-
-.recipe-card__description {
-    font-size: 24px;
-    color: #424242;
-}
-
-/* Botones  */
-.button-container {
-    text-align: right;
-    margin-top: 20px;
-}
-
-.button--vermas {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #ED1C24;
-    color: #FAFAFA;
-    text-decoration: none;
-    border-radius: 5px;
-}
-
-.button--vermas:hover {
-    background-color: #C2171E;
-
-}
-
-/* Testimonios  */
-
-.testimonials-block {
-    margin-top: 40px;
-    margin-bottom: 40px;
-    text-align: left;
-}
-
-.testimonial-title {
-    text-align: left;
-    margin-bottom: 30px;
-    color: #ED1C24;
-    font-size: 32px;
-}
-
-.testimonials-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 15px;
-    margin-bottom: 30px;
-    border-radius: 8px;
-}
-
-.testimonial-card {
-    display: flex;
-    align-items: center;
-    padding: 16px;
-    border: 2px solid #ED1C24;
-    border-radius: 8px;
-    background-color: #FAFAFA;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.08);
-}
-
-.testimonial-card:hover {
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
-}
-
-.testimonial-card__image {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-right: 15px;
-    flex-shrink: 0;
-}
-
-.testimonial-card__content {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-    text-align: left;
-}
-
-.testimonial-card__author {
-    font-weight: bold;
-    margin-bottom: 5px;
-    color: #ED1C24;
-}
-
-.testimonial-card__description {
-    font-style: italic;
-    font-size: 24px;
-    color: #424242;
-}
-
-
-
-
-/*  FOOTER */
-
-
-.footer-block {
-    background-color: #212121;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    justify-content: center;
-    gap: 15px;
-    align-items: center;
-    text-align: center;
-    color: #FAFAFA;
-    height: auto;
-}
-
-
-.newsletter-footer {
-    grid-column: 1 / 2;
-}
-
-.newsletter-form {
-    align-items: center;
-    gap: 10px;
-    flex-direction: column;
-}
-
-.newsletter-form__title {
-    text-align: center;
-    padding-top: 20px;
-
-}
-
-.newsletter-form__label {
-    font-size: 15px;
-    color: #FAFAFA;
-}
-
-.newsletter-form__input {
-    width: 80%;
-    max-width: 300px;
-    padding: 8px;
-    border: #C2171E 1px solid;
-    background-color: #FAFAFA;
-    color: #343434;
-    font-size: 12px;
-    margin-bottom: 15px;
-
-}
-
-.newsletter-form__button {
-    margin-bottom: 15px;
-}
-
-
-.logo--footer {
-    display: flex;
-    gap: 10px;
-    justify-content: space-around;
-    padding: 15px;
-    flex-wrap: wrap;
-
-}
-
-.logo--description {
-    font-size: 24px;
-    margin: 0;
-}
-
-
-
-.logo--footer__red-social {
-    width: 32px;
-    height: 32px;
-}
-
-
-.li-link {
-    color: #fafafa;
-    text-decoration: none;
-}
-
-
-.li-link:hover {
-    color: #C2171E;
-
-}
-
-
-ul.logo--footer {
-    list-style: none;
-
-}
-
-
-/* -------- PÁGINA QUIÉNES SOMOS -------------------- */
-
-/* Titulos */
-
-.quienes-somos--principal__title {
-    margin-bottom: 15px;
-    color: #4E4852;
-    font-size: 40px;
-}
-
-.quienes-somos--principal__subtitle {
-    text-align: left;
-    color: #ED1C24;
-    font-size: 32px;
-    line-height: 40px;
-}
-
-/* contenido es imagen + descripción */
-.quienes-somos-section {
-    margin-bottom: 60px;
-}
-
-.quienes-somos-content {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    gap: 40px;
-    padding: 20px;
-    align-items: flex-start;
-    text-align: start;
-    background-color: #f9f9f9;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
-}
-
-
-.quienes-somos__image {
-    width: 100%;
-    height: auto;
-    max-height: 600px;
-    border-radius: 8px;
-    object-fit: cover;
-    display: block;
-}
-
-.quienes-somos__texto-container {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-    text-align: justify;
-    font-size: 18px;
-    color: #424242;
-}
-
-.quienes-somos__description {
-    margin: 8;
-}
-
-
-/* Contacto */
-
-.contacto-section {
-    padding: 40px 20px;
-    background-color: #f0f0f0;
-    border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
-    margin-bottom: 40px;
-    text-align: center;
-}
-
-.contacto-section__title {
-    color: #ED1C24;
-    font-size: 36px;
-    margin-bottom: 30px;
-}
-
-.contacto-form {
-    display: flex;
-    flex-direction: column;
-    max-width: 800px;
-    margin: 0;
-    gap: 20px;
-}
-
-.form-group {
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-}
-
-.form-group__label {
-    margin-bottom: 8px;
-    font-weight: bold;
-    color: #343434;
-}
-
-.form-group__input,
-.form-group__textarea {
-    padding: 12px;
-    border: 1px solid #C2171E;
-    border-radius: 8px;
-    font-size: 16px;
-    width: 100%;
-    box-sizing: border-box;
-}
-
-.form-group__textarea {
-    background-color: #ED1C24;
-    color: #FAFAFA;
-    padding: 12px 25px;
-    border: none;
-    border-radius: 8px;
-    cursor: pointer;
-    font-size: 18px;
-    font-weight: bold;
-    align-self: center;
-    margin-top: 20px;
-}
-
-.button--submit:hover {
-    background-color: #4E4852;
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
 }
 
-.button {
-    display: inline-block;
-    padding: 10px 20px;
-    background-color: #ED1C24;
-    color: #FAFAFA;
-    text-decoration: none;
-    border-radius: 5px;
+a {
+  text-decoration: none;
+  color: inherit;
 }
-
-
-
-
-
-
-
-
-
-
 
-
-
-
-
-/* ------- MEDIAS QUERYS ----------- */
-/* Recordatorio, los estilos en general van antes */
-
-/* Tablets */
-@media (min-width: 480px) and (max-width: 1024px) {
-    .presentacion {
-        grid-template-columns: 1fr;
-        padding: 8px;
-    }
-
-    .presentacion--image {
-        max-width: 80%;
-        margin: 0 auto;
-    }
-
-    .cards-container {
-        grid-template-columns: repeat(2, 1fr);
-        gap: 15px;
-    }
-
-    .testimonial-card__image {
-        width: 60px;
-        height: 60px;
-    }
-
-    .testimonials-container {
-        grid-template-columns: 1fr;
-        gap: 10px;
-    }
-
-    .cards-container {
-        grid-template-columns: repeat(2, 1fr);
-    }
-
-    .navbar ul {
-        gap: 20px;
-        flex-direction: row;
-        justify-content: space-around;
-
-    }
-
-    .contenedor-nav-search {
-        justify-content: center;
-
-    }
-
-
-    .footer-block {
-        grid-template-columns: 1fr;
-        padding: 20px;
-
-        align-items: center;
-    }
-
-    .newsletter-footer,
-    .logo--description,
-    .logo-block {
-        margin-bottom: 30px;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-    }
-
-    .newsletter-footer {
-        margin-top: 10px;
-    }
-
-    .logo--description {
-        margin-top: 10px;
-    }
-
-    .newsletter-form__input {
-        width: 90%;
-        max-width: 400px;
-    }
-
-    .quienes-somos__description {
-        font-size: 15px;
-        padding: 4;
-        margin: 4;
-
-    }
+ul {
+  list-style: none;
 }
-
-
-
 
-
-
-/* Móviles */
-@media (max-width: 480px) {
-    main {
-        width: 95%;
-        padding: 10px 0;
-    }
-
-    .presentacion {
-        gap: 16px;
-        flex-direction: column;
-    }
-
-    .presentacion--image {
-        max-width: 90%;
-    }
-
-    .cards-container {
-        grid-template-columns: 1fr;
-        gap: 10px;
-    }
-
-    .recipe-card__image {
-        height: 200px;
-    }
-
-    .recipe-card__title {
-        font-size: 16px;
-    }
-
-    .recipe-card__description {
-        font-size: 12px;
-    }
-
-    .recipe-title {
-        font-size: 28px;
-        margin-bottom: 20px;
-    }
-
-    .button--vermas {
-        padding: 8px 15px;
-        font-size: 15px;
-    }
-
-    .testimonials-container {
-        grid-template-columns: 1fr;
-        padding: 10px;
-    }
-
-    .testimonial-card {
-        flex-direction: column;
-        text-align: center;
-        padding: 16px;
-    }
-
-    .testimonial-card__image {
-        margin-right: 0;
-        margin-bottom: 10px;
-        width: 70px;
-        height: 70px;
-    }
-
-    .testimonial-card__content {
-        align-items: center;
-    }
-
-    .navbar ul {
-        gap: 20px;
-        flex-direction: row;
-        justify-content: space-around;
-    }
-
-    .footer-block {
-        padding: 15px;
-        grid-template-columns: 1fr;
-    }
-
-    .newsletter-footer,
-    .logo--description,
-    .logo-block {
-        margin-bottom: 25px;
-    }
-
-    .newsletter-form__input {
-        width: 95%;
-    }
-
-    .logo--footer {
-        gap: 15px;
-    }
-
-    .logo--footer__red-social {
-        width: 28px;
-        height: 28px;
-    }
-
-    .li-link {
-        font-size: 15px;
-    }
-
-    .quienes-somos-content {
-        grid-template-columns: 1fr;
-    }
-
-    .quienes-somos__description {
-
-        font-size: 20px;
-        padding: 4;
-        margin: 4;
-
-    }
-}
+/*# sourceMappingURL=style.css.map */
