--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,15 +1,16 @@
-// base
-@use './base/reset' ;
+
+// Base
+@use './base/reset';
 @use './base/tipografia';
 
-// componentes
+// Components
 @use './componentes/button';
 @use './componentes/cards';
-@use './componentes/footer'; 
-@use './componentes/general' ;
-@use './componentes/navbar' ;
+@use './componentes/footer';
+@use './componentes/general';
+@use './componentes/navbar';
 
-//utilities
-@use './utilities/extend' ; 
-@use './utilities/mixins' ;
+// Utilities
+@use './utilities/extend';
+@use './utilities/mixins';
 @use './utilities/variables';
