--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -1,33 +1,43 @@
+@use '../utilities/variables';
+
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    line-height: 1.5;
+  font-family: variables.$font-family-base;
+  color: variables.$color-parrafo;
+  background-color: variables.$color-secundario;
+  line-height: 1.6;
 }
 
 img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-
-}
-button , textarea {
-    font: inherit;
-
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
-p , h1, h2 , h3 , h4 , h5, h6 {
-    overflow-wrap: break-word;
+button, textarea {
+  font: inherit;
+}
+
+p, h1, h2, h3, h4, h5, h6 {
+  overflow-wrap: break-word;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
+}
+
+main {
+  max-width: 1200px;
+  margin: variables.$spacing-md auto;
+  padding: 0 variables.$spacing-sm;
 }
