--- a/scss/base/_tipografia.scss
+++ b/scss/base/_tipografia.scss
@@ -1,2 +1,41 @@
+@use '../utilities/variables';
+
 // fuente 
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+body {
+    font-family: variables.$font-family-base;
+    font-size: variables.$font-size-base;
+    line-height: 1.6;
+    color: variables.$color-parrafo;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: variables.$font-family-titles;
+    color: variables.$color-titulo;
+    margin-bottom: variables.$spacing-sm;
+    margin-top: variables.$spacing-lg;
+}
+
+h1 { font-size: variables.$font-size-hero-title; }
+h2 { font-size: variables.$font-size-section-title; }
+h3 { font-size: 1.8em; }
+h4 { font-size: 1.5em; }
+h5 { font-size: 1.2em; }
+h6 { font-size: 1em; }
+
+p {
+    margin-bottom: variables.$spacing-md;
+}
+
+a {
+    color: variables.$color-primario;
+    text-decoration: none;
+    transition: color 0.3s ease;
+
+    &:hover {
+        color: variables.$color-hover;
+        text-decoration: underline;
+    }
+}
