--- a/scss/componentes/_cards.scss
+++ b/scss/componentes/_cards.scss
@@ -1,21 +1,10 @@
 @use '../utilities/variables';
+@use "../utilities/extend";
 
 
-
-
-.category-block{
-    border: 1px solid variables.$color-parrafo;
-    border-radius: 8px;
-    padding: variables.$spacing-md;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
-    background-color: variables.$color-secundario;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-}
 
 .recipe-card {
-    @extend .category-block;
+    @extend .category-block-extend;
     text-align: center;
     margin-bottom: variables.$spacing-lg;
 
@@ -45,7 +34,7 @@
 }
 
 .testimonial-card {
-    @extend .category-block;
+    @extend .category-block-extend;
     text-align: center;
     margin-bottom: variables.$spacing-lg;
 
@@ -66,8 +55,8 @@
 }
 
 .category-block {
-    margin-top: variables.$spacing-xxl;
-    text-align: center; 
+    @extend .spacing-block  ;
+
     h2 {
         margin-bottom: variables.$spacing-xl;
     }
@@ -81,7 +70,12 @@
 
     @media (max-width: variables.$breakpoint-tablet) {
         .cards-container {
-            grid-template-columns: 1fr;
+            grid-template-columns: repeat(2 , 1fr) ;
+        }
+    }
+    @media (max-width: variables.$breakpoint-mobile) {
+        .cards-container {
+            grid-template-columns: 1fr ;
         }
     }
 }
