--- a/scss/componentes/_cards.scss
+++ b/scss/componentes/_cards.scss
@@ -1,6 +1,5 @@
 @use '../utilities/variables';
 @use "../utilities/extend";
-@use '../utilities/mixins';
 
 
 
@@ -64,7 +63,7 @@
 
     .cards-container {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
         gap: variables.$spacing-lg;
         margin-top: variables.$spacing-md;
     }
