--- a/scss/componentes/_cards.scss
+++ b/scss/componentes/_cards.scss
@@ -1,5 +1,6 @@
 @use '../utilities/variables';
 @use "../utilities/extend";
+@use "../utilities/mixins";
 
 
 
@@ -62,9 +63,7 @@
     }
 
     .cards-container {
-        display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        gap: variables.$spacing-lg;
+        @include mixins.grid(repeat(auto-fit, minmax(280px, 1fr)), variables.$spacing-lg);
         margin-top: variables.$spacing-md;
     }
 
@@ -74,8 +73,8 @@
         }
     }
     @media (max-width: variables.$breakpoint-mobile) {
-        .cards-container {
+        .cards-container{
             grid-template-columns: 1fr ;
         }
-    }
+   }
 }
