--- a/scss/pages/_nosotros.scss
+++ b/scss/pages/_nosotros.scss
@@ -1,10 +1,9 @@
 // Estilos específicos para la página "Nosotros"
 @use "../utilities/variables";
+@use "../utilities/mixins";
 
 .about-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    @include mixins.flex-setup(column);
     text-align: center;
     padding: variables.$spacing-xl 0;
     margin-top: variables.$spacing-xl;
