--- a/scss/utilities/_extend.scss
+++ b/scss/utilities/_extend.scss
@@ -1,4 +1,5 @@
 @use "../utilities/variables";
+@use "../utilities/mixins";
 
 //base del botón 
 
@@ -51,8 +52,7 @@
     padding: variables.$spacing-md;
     box-shadow: 5px 3px 6px 6px rgba(0, 0, 0, 0.08);
     background-color: variables.$color-secundario;
-    display: flex;
-    flex-direction: column;
+    @include mixins.flex-setup(column, center, center);
     overflow: hidden;
 }
 
