--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -3,11 +3,20 @@
 
  // flexibilidad para centro 
 
-@mixin flex-centro($direction: row) {
-    display: flex;
-    flex-direction: $direction;
-    justify-content: center;
-    align-items: center;
+// @mixin flex-centro($direction: row) {
+//     display: flex;
+//     flex-direction: $direction;
+//     justify-content: center;
+//     align-items: center;
+// }
+
+// mixin más reemplazable
+@mixin flex-setup($direction: row, $justify: center, $align: center, $wrap: nowrap) {
+  display: flex;
+  flex-direction: $direction;
+  justify-content: $justify;
+  align-items: $align;
+  flex-wrap: $wrap;
 }
 
 
@@ -21,4 +30,11 @@
 
 @mixin transiciones($property, $duration, $timing-function) {
     transition: $property $duration $timing-function;
+}
+// grid
+
+@mixin grid($columns, $gap) {
+  display: grid;
+  grid-template-columns: $columns;
+  gap: $gap;
 }
